RESOLVED FIXED281400
[FFC] Incorrect flex item placement when flex-flow is column-reverse
https://bugs.webkit.org/show_bug.cgi?id=281400
Summary [FFC] Incorrect flex item placement when flex-flow is column-reverse
alan
Reported 2024-10-13 10:25:26 PDT
ssia
Attachments
Patch (1.60 KB, patch)
2024-10-13 10:29 PDT, alan
no flags
Patch (1.60 KB, patch)
2024-10-13 16:55 PDT, alan
no flags
[fast-cq]Patch (1.60 KB, patch)
2024-10-13 18:26 PDT, alan
no flags
alan
Comment 1 2024-10-13 10:29:12 PDT
alan
Comment 2 2024-10-13 16:55:57 PDT
alan
Comment 3 2024-10-13 18:26:42 PDT
Created attachment 472928 [details] [fast-cq]Patch
EWS
Comment 4 2024-10-13 19:45:29 PDT
Committed 285108@main (fca4fc100e5c): <https://commits.webkit.org/285108@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472928 [details].
Radar WebKit Bug Importer
Comment 5 2024-10-13 19:46:15 PDT
Note You need to log in before you can comment on or make changes to this bug.