[FFC] Incorrect flex item placement when flex-flow is column-reverse https://bugs.webkit.org/show_bug.cgi?id=281400

Reviewed by Antti Koivisto.

Now that the integration layer takes care of row/column flip, we just need to use the main axis here.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::setFlexItemsGeometry):

Canonical link: https://commits.webkit.org/285108@main